--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,13 @@ crawlee>=1.0.0
 playwright>=1.40.0
 httpx>=0.25.0
 
+# Hybrid Content Extraction Dependencies
+newspaper3k>=0.2.8
+readability-lxml>=0.8.1
+goose3>=3.1.15
+aiohttp>=3.8.0
+requests>=2.28.0
+beautifulsoup4>=4.12.0
+
 # Optional: For better performance and features
 aiofiles>=23.0.0
